# nombres-premiers

./: Makefile  README.md  bench.bat  bench.sh  main.js  meson.build  native-gcc.txt  recherche_de_nombres_premiers.rar  recherche_de_nombres_premiers_Linux_arm64  test.js  verifier_primarite_Linux_arm64
.idx/: dev.nix
Code/: cpu_search.c  cpu_search.cu  gpu_search.cu  lib.cu  lib.h  lib.hu  main.c  main.cu  search.cu
Code Source/Recherche_nombresPremiers/: main.c  package.json  recherche_NP.js
Code Source/verfierPrimarité/: main.c  main.js  package.json
Code/CPU/: main.c
Code/CUDA/: main.cu
Code/Recherche_nombresPremiers/: Nombres-Premiers.txt  a.out  main.c
Code/verfierPrimarité/: main.c
Include/: mutexManager.h  search.hpp
Nouveau dossier/: package-lock.json  test.js
Recherche_nombresPremiers/: package.json
src/: bench.cc  main.c  main.cc  mutex_manager.c  search.c  search.cc  search.cu
src/assembly/: finder.asm
src/c++/: find.cc  main.cc
verfierPrimarité/: main.js
